Add versions to the MIDI apps.
This is required before posting a prebuilt APK.

--- a/MidiKeyboard/AndroidManifest.xml
+++ b/MidiKeyboard/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.midikeyboard">
+    package="com.android.midikeyboard"
+        android:versionCode="1"
+        android:versionName="1.0">
 
     <uses-feature android:name="android.software.midi" android:required="true"/>
 
