--- a/MidiBtlePairing/AndroidManifest.xml
+++ b/MidiBtlePairing/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.android.example.midibtlepairing">
+        package="com.android.example.midibtlepairing"
+        android:versionCode="1"
+        android:versionName="1.0">
 
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
     <uses-feature android:name="android.software.midi" android:required="true"/>
