--- a/MidiKeyboard/AndroidManifest.xml
+++ b/MidiKeyboard/AndroidManifest.xml
@@ -1,11 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.midikeyboard"
-        android:versionCode="1"
-        android:versionName="1.0">
+        android:versionCode="2"
+        android:versionName="1.1">
+
+    <uses-sdk
+        android:minSdkVersion="23"
+        android:targetSdkVersion="23" />
 
     <uses-feature android:name="android.software.midi" android:required="true"/>
 
-    <application>
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher">
         <activity android:name="MainActivity" android:label="MIDI Keyboard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
