--- a/MidiKeyboard/AndroidManifest.xml
+++ b/MidiKeyboard/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.midikeyboard"
+    package="com.mobileer.midikeyboard"
         android:versionCode="2"
         android:versionName="1.1">
 
@@ -12,7 +12,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher">
-        <activity android:name="MainActivity" android:label="MIDI Keyboard">
+        <activity android:name="com.mobileer.midikeyboard.MainActivity" android:label="MIDI Keyboard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
