--- a/MidiScope/AndroidManifest.xml
+++ b/MidiScope/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.android.example.midiscope"
+        package="com.mobileer.example.midiscope"
         android:versionCode="2"
         android:versionName="1.1">
 
@@ -12,7 +12,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher">
-        <activity android:name="MainActivity" android:label="MIDI Scope">
+        <activity android:name="com.mobileer.example.midiscope.MainActivity" android:label="MIDI Scope">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name="MidiScope"
+        <service android:name="com.mobileer.example.midiscope.MidiScope"
             android:permission="android.permission.BIND_MIDI_DEVICE_SERVICE">
             <intent-filter>
                 <action android:name="android.media.midi.MidiDeviceService" />
