--- a/MidiSynthExample/AndroidManifest.xml
+++ b/MidiSynthExample/AndroidManifest.xml
@@ -16,12 +16,12 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="com.mobileer.midisynthexample"
-        android:versionCode="2"
-        android:versionName="1.1">
+        android:versionCode="3"
+        android:versionName="1.2">
 
     <uses-sdk
         android:minSdkVersion="23"
-        android:targetSdkVersion="23" />
+        android:targetSdkVersion="N" />
 
     <uses-feature android:name="android.software.midi" android:required="true"/>
 
