--- a/MidiSynthExample/AndroidManifest.xml
+++ b/MidiSynthExample/AndroidManifest.xml
@@ -17,7 +17,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="com.mobileer.midisynthexample"
         android:versionCode="4"
-        android:versionName="1.3">
+        android:versionName="@string/versionName">
 
     <uses-sdk
         android:minSdkVersion="23"
