--- a/MidiKeyboard/AndroidManifest.xml
+++ b/MidiKeyboard/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mobileer.midikeyboard"
-        android:versionCode="3"
-        android:versionName="1.2">
+        android:versionCode="4"
+        android:versionName="@string/versionName">
 
     <uses-sdk
         android:minSdkVersion="23"
