--- a/midisynthexample/build.gradle
+++ b/midisynthexample/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.application'
 
+def versionMajor = 1
+def versionMinor = 5
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
@@ -9,7 +12,9 @@ android {
         minSdkVersion 23
         targetSdkVersion 23
         versionCode 6
-        versionName "1.5"
+        versionName "${versionMajor}.${versionMinor}"
+
+        resValue "string", "versionName", "${defaultConfig.versionName}"
     }
     buildTypes {
         release {
