--- a/MidiKeyboard/build.gradle
+++ b/MidiKeyboard/build.gradle
@@ -5,7 +5,7 @@ def versionMinor = 3
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "com.mobileer.midikeyboard"
@@ -25,7 +25,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile project(':MidiTools')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation project(':MidiTools')
 }
