--- a/MidiKeyboard/build.gradle
+++ b/MidiKeyboard/build.gradle
@@ -4,13 +4,12 @@ def versionMajor = 1
 def versionMinor = 3
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "com.mobileer.midikeyboard"
         minSdkVersion 23
-        targetSdkVersion 23
+        targetSdkVersion 28
         versionCode 4
         versionName "${versionMajor}.${versionMinor}"
 
@@ -25,7 +24,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile project(':MidiTools')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation project(':MidiTools')
 }
