--- a/MidiBtlePairing/build.gradle
+++ b/MidiBtlePairing/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 29
 
     defaultConfig {
         applicationId "com.mobileer.example.midibtlepairing"
         minSdkVersion 23
-        targetSdkVersion 23
+        targetSdkVersion 29
         versionCode 2
         versionName "1.1"
     }
@@ -20,5 +20,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:25.0.1'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 }
