--- a/MidiScope/build.gradle
+++ b/MidiScope/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 29
 
     defaultConfig {
         applicationId "com.mobileer.example.midiscope"
         minSdkVersion 23
-        targetSdkVersion 23
+        targetSdkVersion 29
         versionCode 2
         versionName "1.1"
     }
@@ -20,6 +20,6 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation project(':MidiTools')
 }
