--- a/MidiSynthExample/src/main/AndroidManifest.xml
+++ b/MidiSynthExample/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:banner="@mipmap/ic_banner">
+
         <activity android:name="com.mobileer.midisynthexample.MainActivity" android:label="SynthExample">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
