Show disconnect button and version.
The X button was hidden in the Layout.
Add borders around items in Lists.
Also bumped version to 1.3.0 and show on main Activity.

Fixes #74

--- a/MidiBtlePairing/build.gradle
+++ b/MidiBtlePairing/build.gradle
@@ -7,13 +7,21 @@ android {
         applicationId "com.mobileer.example.midibtlepairing"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 3
-        versionName "1.2"
+        versionCode 4
+        versionName "1.3.0"
     }
     buildTypes {
+        debug {
+            versionNameSuffix ".debug"
+            resValue "string", "app_version",
+                    "${defaultConfig.versionName}${versionNameSuffix}"
+        }
         release {
+            resValue "string", "app_version",
+                    "${defaultConfig.versionName}"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
         }
     }
 }
