--- a/MidiBtlePairing/src/main/AndroidManifest.xml
+++ b/MidiBtlePairing/src/main/AndroidManifest.xml
@@ -8,12 +8,16 @@
 
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher">
-        <activity android:name="com.mobileer.example.midibtlepairing.MainActivity" android:label="MIDI+BTLE">
+        <activity android:name="com.mobileer.example.midibtlepairing.MainActivity"
+            android:label="MIDI+BTLE"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
