--- a/MidiBtlePairing/build.gradle
+++ b/MidiBtlePairing/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 36
 
     defaultConfig {
         applicationId "com.mobileer.example.midibtlepairing"
         minSdkVersion 23
-        targetSdkVersion 33
+        targetSdkVersion 36
         versionCode 5
         versionName "1.4.0"
     }
@@ -24,6 +24,7 @@ android {
 
         }
     }
+    namespace 'com.mobileer.example.midibtlepairing'
 }
 
 dependencies {
