--- a/MidiSynthExample/build.gradle
+++ b/MidiSynthExample/build.gradle
@@ -4,12 +4,12 @@ def versionMajor = 1
 def versionMinor = 8
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 36
 
     defaultConfig {
         applicationId "com.mobileer.midisynthexample"
         minSdkVersion 23
-        targetSdkVersion 33
+        targetSdkVersion 36
         versionCode 9
         versionName "${versionMajor}.${versionMinor}"
 
@@ -21,6 +21,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.mobileer.midisynthexample'
 }
 
 dependencies {
